--- a/HospitalSystem-master/PatientManageSystem/nbproject/private/private.properties
+++ b/HospitalSystem-master/PatientManageSystem/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.47-bin.jar=C:\\Users\\mikep\\Desktop\\UNIVERSITY\\^JAVA^\\lab\\mysql-connector-java-5.1.47-bin.jar
+file.reference.mysql-connector-java-5.1.47-bin.jar=C:\\Users\\mikep\\Desktop\\UNIVERSITY\\^JAVA 1.0^\\lab\\mysql-connector-java-5.1.47-bin.jar
 user.properties.file=C:\\Users\\mikep\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
